# rayna

./: .gitattributes  .gitignore  Cargo.toml  readme.md  render.exr.REMOVED.git-id  rust-toolchain.toml
.cargo/: config.toml
media/2018-09-20 - Majercik - Voxel/: bibtex.bib  link.txt
media/2018-09-20 - Majercik - Voxel/supplement/: Box.glsl  intersect.glsl
media/2018-09-20 - Majercik - Voxel/supplement/others/: ailaWald.glsl  kayKajiya.glsl  scratch.glsl  williams.glsl  woo.glsl
media/2018-09-20 - Majercik - Voxel/supplement/ue4/: BasePassPixelShader.usf  BasePassVertexShader.usf  FXSystemPrivate.h  ParticleGPUSpriteVertexFactory.ush  ParticleGpuSimulation.cpp  ParticleInjectionShader.usf  ParticleModuleRequired.h  ParticleSimulationShader.usf  README.txt  perfNumbers.txt
media/textures/earthmap/: info.md
rayna_bin/: Cargo.toml
rayna_core/: Cargo.toml
rayna_core/src/: lib.rs
rayna_core/src/def/: mod.rs  targets.rs  types.rs
rayna_core/src/math/: glam.rs  mod.rs  nalgebra.rs
rayna_core/src/ray/: mod.rs
rayna_core/src/render/: mod.rs  render_opts.rs  renderer.rs
rayna_core/src/scene/: mod.rs
rayna_core/src/shape/: mod.rs
rayna_core/src/shared/: camera.rs  intersect.rs  mod.rs  ray.rs
rayna_engine/: Cargo.toml
rayna_engine/examples/: verbose_example.rs
rayna_engine/src/: lib.rs
rayna_engine/src/accel/: aabb.rs  bvh.rs
rayna_engine/src/core/: colour.rs  gradient.rs  image.rs  impl_utils.rs  mod.rs  profiler.rs  targets.rs  types.rs
rayna_engine/src/core/macros/: impl_utils.rs  mod.rs  profiler.rs  targets.rs
rayna_engine/src/fat_object/: mod.rs  object_list.rs  transformed.rs
rayna_engine/src/mat/: dielectric.rs  diffuse.rs  dynamic.rs  lambertian.rs  metal.rs  mod.rs
rayna_engine/src/material/: dielectric.rs  dynamic.rs  isotropic.rs  lambertian.rs  light.rs  metal.rs  mod.rs
rayna_engine/src/mesh/: axis_box.rs  bvh.rs  cylinder.rs  dynamic.rs  group.rs  homogenous_volume.rs  infinite_plane.rs  list.rs  mod.rs  parallelogram.rs  planar.rs  polygonised.rs  raymarched.rs  sphere.rs  triangle.rs
rayna_engine/src/mesh/advanced/: bvh.rs  dynamic.rs  isosurface.rs  list.rs  mod.rs  raymarched.rs  triangle.rs  voxel_grid.rs
rayna_engine/src/mesh/isosurface/: mod.rs  polygonised.rs  raymarched.rs
rayna_engine/src/mesh/planar/: infinite_plane.rs  mod.rs  parallelogram.rs  triangle.rs
rayna_engine/src/mesh/primitive/: axis_box.rs  cylinder.rs  mod.rs  sphere.rs  triangle.rs  voxel_grid.rs
rayna_engine/src/noise/: boxed.rs  mod.rs
rayna_engine/src/object/: axis_box.rs  box.rs  bvh.rs  dynamic.rs  group.rs  homogenous_volume.rs  infinite_plane.rs  list.rs  mod.rs  parallelogram.rs  planar.rs  simple.rs  sphere.rs  transform.rs  transformed.rs  triangle.rs  volumetric.rs
rayna_engine/src/render/: accum_buffer.rs  mod.rs  render.rs  render_opts.rs  renderer.rs
rayna_engine/src/scene/: camera.rs  mod.rs  object_list.rs  preset.rs  stored.rs  transform_utils.rs
rayna_engine/src/shared/: aabb.rs  bounds.rs  camera.rs  colour.rs  generic_bvh.rs  image.rs  impl_utils.rs  intersect.rs  interval.rs  math.rs  mod.rs  ray.rs  rng.rs  scene.rs  simd_math.rs  token.rs  transform_utils.rs  validate.rs
rayna_engine/src/skybox/: default.rs  default_skybox.rs  dynamic.rs  hdri.rs  mod.rs  none.rs  simple.rs
rayna_engine/src/texture/: checker.rs  dynamic.rs  image.rs  mod.rs  noise.rs  solid.rs
rayna_engine/tests/: simple_renders.rs
rayna_engine/tests/common/: mod.rs
rayna_shared/: Cargo.toml
rayna_shared/src/: colour.rs  image.rs  lib.rs  profiler.rs
rayna_shared/src/def/: mod.rs  targets.rs  types.rs
rayna_shared/src/profiler/: mod.rs
rayna_ui/: Cargo.toml  readme.md
rayna_ui/src/: app.rs  main.rs  profiler.rs  rayna_app.rs  targets.rs  ui_val.rs
rayna_ui/src/app/: mod.rs  rayna_app.rs
rayna_ui/src/backend/: eframe.rs  miniquad.rs  mod.rs
rayna_ui/src/def/: mod.rs  targets.rs  ui_str.rs  ui_val.rs
rayna_ui/src/definitions/: constants.rs  mod.rs  targets.rs  ui_str.rs
rayna_ui/src/ext/: img_ext.rs  mod.rs  ui_ext.rs
rayna_ui/src/func/: mod.rs
rayna_ui/src/integration/: message.rs  mod.rs  worker.rs
rayna_ui/src/manager/: mod.rs
rayna_ui/src/profiler/: mod.rs
rayna_ui_base/: Cargo.toml
rayna_ui_base/src/: app.rs  lib.rs
rayna_ui_base/src/app/: mod.rs
rayna_ui_base/src/backend/: eframe.rs  miniquad.rs  mod.rs
renders/2024-01-17 - RTTNW Demo/: info.md  render.exr.REMOVED.git-id
scripts/: cargo-watch-build.ps1  cargo-watch-cloc.ps1  check.sh  check_full.sh  cloc.sh
