# ===== WORKSPACE =====
[workspace]
resolver = "2"
members = [
    "rayna_engine",
    "rayna_shared",
    "rayna_ui",
]

[workspace.dependencies]

# UI
egui = { version = "0.24.1", features = ["puffin", "mint", "default_fonts", "bytemuck", "callstack", "cint", "color-hex", "persistence", "ron"] }
enum2egui = "0.1.7"

# Maths

glam = { version = "0.24.2", features = ["approx", "mint", "rand", "serde", "debug-glam-assert", "std"] }
glamour = { version = "0.9.0", features = ["serde", "mint"] }
num-traits = "0.2.17"
mint = "0.5.9"

# Errors

anyhow = "1.0.75"
thiserror = "1.0.50"

# I love logging

tracing = { version = "0.1.40", features = ["valuable"] }
tracing-serde = { version = "0.1.3", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
valuable = { version = "0.1.0", features = ["derive"] }

# Other

image = "0.24.7" # Used to store image buffers
nonzero = "0.2.0"
cfg-if = "1.0.0"
itertools = "0.12.0"
derivative = "2.2.0"
memoize = "0.4.1"
approx = "0.5.1"
enum2str = "0.1.10"
strum = "0.25.0"
strum_macros = "0.25.0"

# Performance

puffin = { version = "0.18.1" }
puffin_http = { version = "0.15.0"}
rayon = "1.8.0"

[patch.crates-io]
# Using a custom version of puffin (cloned locally in libs/puffin)
# So that we can have multiple instances of the puffin_http::Server
# That DON'T share the same global profiler instance
puffin = { path = "lib/puffin/puffin" }
puffin_http = { path = "lib/puffin/puffin_http" }

[profile.dev]
# Default dev profile, fast compile times
debug = 1
lto = "off"
incremental = true
debug-assertions = true
opt-level = 1
codegen-units = 128
[profile.dev.package."*"]
opt-level = 3

[profile.dbg]
# Only useful for debugging, very slow
inherits = "dev"
debug = "full"
opt-level = 0
[profile.dbg.package."*"]
opt-level = 1
codegen-units = 32

[profile.release]
# Zooomies in release
debug = "full"
lto = "fat"
opt-level = 3
codegen-units = 1