# ===== PACKAGE =====
[package]
name = "rayna_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

# Raytracing deps
rayna_core = {path = "../rayna_core"}

# Display/UI
imgui = { version = "0.11.0", features = ["docking", "tables-api"] }
imgui-winit-glow-renderer-viewports = { version = "0.11.0", features = [] }
imgui-glow-renderer = { version = "0.11.0", features = [] }
# These are all versions based on the imgui crates requirements
glow = "0.12.0"
winit = "0.27.2"
glutin = "0.30.3"
glutin-winit = "0.2.1"
raw-window-handle = "0.5.0"

# ===== BUILD PROFILES =====
