# ===== PACKAGE =====
[package]
name = "rayna_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

# Maths
glam = { version = "0.24.2", features = ["approx", "mint", "rand", "serde", "debug-glam-assert", "std"] }

# Raytracing
rtbvh = "0.6.2"

# Other
cfg-if = "1.0.0"
