# ===== PACKAGE =====
[package]
name = "rayna_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

glam = { workspace = true }
glamour = { workspace = true }
num-traits = { workspace = true }

# Raytracing
rtbvh = "0.6.2" # Used for accelerating intersection checks
image = { workspace = true }

# Other
cfg-if = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nonzero = { workspace = true }
dyn-clone = "1.0.16"
valuable = { workspace = true }
serde = { workspace = true }