# ===== PACKAGE =====
[package]
name = "rayna_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

rayna_shared = { path = "../rayna_shared" }

# Maths
glam = { workspace = true }
glamour = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rand_pcg = { workspace = true }
rand_xorshift = { workspace = true }
rand_hc = { workspace = true }
rand_isaac = { workspace = true }

# Raytracing
rtbvh = "0.6.2" # Used for accelerating intersection checks
image = { workspace = true }

# Logs
tracing = { workspace = true }

# Other
thiserror = { workspace = true }
nonzero = { workspace = true }
dyn-clone = "1.0.16"
valuable = { workspace = true }
serde = { workspace = true }
memoize = { workspace = true }
derivative = { workspace = true }
approx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
smallvec = { version = "1.11.2", features = ["const_generics", "const_new", "specialization"] }
enum_dispatch = "0.3.12"

# Perf
puffin = { workspace = true }
rayon = { workspace = true }
opool = "0.1.1"