# ===== PACKAGE =====

[package]
name = "rayna_engine"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# ===== DEPENDENCIES =====


[dependencies]

# Maths
glam = { workspace = true }
glamour = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rand_xorshift = { workspace = true }
noise = { workspace = true }
ndarray = { workspace = true }
isosurface = "0.1.0-alpha.0"

# Logs
tracing = { workspace = true }

# Other
thiserror = { workspace = true }
nonzero = { workspace = true }
valuable = { workspace = true }
educe = { workspace = true }
approx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
smallvec = { version = "1.11.2", features = ["const_generics", "const_new", "specialization"] }
enum_dispatch = "0.3.12"
getset = { workspace = true }
itertools = { workspace = true }
indextree = "4.6.0"
image = { workspace = true }
paste = { workspace = true }
const_format = { workspace = true }

# Perf
puffin = { workspace = true } # PATCHED
puffin_http = { workspace = true } # PATCHED
rayon = { workspace = true }
opool = { workspace = true } # PATCHED


# ===== DEV DEPENDENCIES =====


[dev-dependencies]
tempfile = "3.10.1"
opener = "0.7.1"
viuer = "0.7.1"
# Incompatible version with ours, dev-only
image_viuer_compat = { version = "0.24.9", package = "image" }