[package]
name = "rayna_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

# Maths
glamour = { workspace = true }

# Raytracing
image = { workspace = true }

# Logs
tracing = { workspace = true }

# Other
once_cell = "1.19.0"
paste = "1.0.14"
rand = { workspace = true }

# Perf
puffin = { workspace = true }
puffin_http = { workspace = true }