# ===== PACKAGE =====
[package]
name = "rayna_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

# Raytracing deps
rayna_engine = { path = "../rayna_engine" }
rayna_shared = { path = "../rayna_shared" }

# Math
#glam = { workspace = true }
#glamour = { workspace = true }
mint = { workspace = true }

# Display/UI
egui = { workspace = true }
# Having issues when the "accesskit" feature is enabled, so don't use it here
eframe = { version = "0.24.1", features = ["glow", "default_fonts", "puffin"], default-features = false, optional = true }
egui-miniquad = { version = "0.14.0", optional = true }
miniquad = { version = "0.3.12", optional = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging is amazing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["json", "local-time", "ansi"] }

# Ray tracing
image = { workspace = true }

# Other
flume = { version = "0.11.0", features = ["async"] }
valuable = { workspace = true }
derivative = { workspace = true }
strum = { workspace = true }

# Perf
puffin = { workspace = true }
rayon = { workspace = true }
log = "0.4.20"

# ===== FEATURES =====

[features]
default = [
    "backend_eframe",
    #    "backend_miniquad", # Disabled as it uses out-of-date `egui` version
]

backend_eframe = ["dep:eframe"]
backend_miniquad = ["dep:egui-miniquad", "dep:miniquad"]
