# ===== PACKAGE =====

[package]
name = "rayna_ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# ===== DEPENDENCIES =====


[dependencies]

# Raytracing deps
rayna_engine = { path = "../rayna_engine" }

# Math
#glam = { workspace = true }
#glamour = { workspace = true }
mint = { workspace = true }
rand = { workspace = true }

# UI
egui = { workspace = true }
# Having issues when the "accesskit" feature is enabled, so don't use it here
eframe = { version = "0.27.2", features = ["glow", "default_fonts", "puffin"], default-features = false, optional = true }
# Latest version on <crates.io> is `0.14.0`, which is over a year old and uses incompatible version of egui
egui-miniquad = { git = "ssh://git@github.com/not-fl3/egui-miniquad.git", optional = true }
miniquad = { version = "0.4.0", optional = true }

# Errors
# TODO: See if we can remove our use of `anyhow`
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging is amazing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["json", "local-time", "ansi", "tracing-log", "env-filter", "registry"] }

# Other
flume = { version = "0.11.0", features = ["async"] }
valuable = { workspace = true }
derivative = { workspace = true }
strum = { workspace = true }
throttle = "0.1.0"
humantime = "2.1.0"
paste = { workspace = true }
once_cell = { workspace = true }

# Perf
puffin = { workspace = true }
puffin_http = { workspace = true }
rayon = { workspace = true }


# ===== FEATURES =====


[features]
default = [
    "backend_eframe",
    "backend_miniquad",
]

backend_eframe = ["dep:eframe"]
backend_miniquad = ["dep:egui-miniquad", "dep:miniquad"]