# ===== PACKAGE =====

[package]
name = "rayna_ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# ===== DEPENDENCIES =====


[dependencies]

# Raytracing deps
rayna_engine = { path = "../rayna_engine" }

# Math
#glam = { workspace = true }
#glamour = { workspace = true }
mint = { workspace = true }
rand = { workspace = true }

# UI

# UI
egui = { version = "0.28.0", features = ["puffin", "mint", "default_fonts", "bytemuck", "callstack", "cint", "color-hex", "persistence", "ron"] }
# Having issues when the "accesskit" feature is enabled, so don't use it here
eframe = { version = "0.28.0", features = ["glow", "default_fonts", "puffin"], default-features = false, optional = true }
egui-miniquad = { version = "0.14.0", optional = true } # PATCHED
miniquad = { version = "0.4.0", optional = true } # TODO: Update miniquad version

# Errors
# TODO: See if we can remove our use of `anyhow`
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging is amazing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["json", "local-time", "ansi", "tracing-log", "env-filter", "registry"] }

# Other
flume = { version = "0.11.0", features = ["async"] }
valuable = { workspace = true }
derivative = { workspace = true }
strum = { workspace = true }
throttle = "0.1.0"
humantime = "2.1.0"
once_cell = { workspace = true }

# Perf
puffin = { workspace = true } # PATCHED
puffin_http = { workspace = true } # PATCHED
rayon = { workspace = true }


# ===== FEATURES =====


[features]
default = [
    "backend_eframe",
#    "backend_miniquad",
]

backend_eframe = ["dep:eframe"]
backend_miniquad = ["dep:egui-miniquad", "dep:miniquad"]