# ===== PACKAGE =====
[package]
name = "rayna_ui_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

# The current version of egui-miniquad (0.14.0) uses egui (0.21.0)
# So we have to use a lower version here :(
# Same for minquad version (0.3.12)
egui = "0.21.0"
# Having issues when the "accesskit" feature is enabled, so don't use it here
eframe = { version = "0.21.3", features = ["glow", "default_fonts"], default-features = false, optional = true }
egui-miniquad = { version = "0.14.0", optional = true }
miniquad = { version = "0.3.12", optional = true }

# Other
anyhow = { workspace = true }
valuable = { workspace = true }
tracing = { workspace = true }

# Perf
puffin = { workspace = true }

# ===== FEATURES =====

[features]
default = [
    "backend_eframe",
    "backend_miniquad",
]

backend_eframe = ["dep:eframe"]
backend_miniquad = ["dep:egui-miniquad", "dep:miniquad"]
