# ===== PACKAGE =====
[package]
name = "rayna_ui_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== DEPENDENCIES =====

[dependencies]

egui = { version = "0.24.1", features = ["puffin", "mint", "default_fonts", "bytemuck", "callstack", "cint", "color-hex", "persistence", "ron"] }
# Having issues when the "accesskit" feature is enabled, so don't use it here
eframe = { version = "0.24.1", features = ["glow", "default_fonts", "puffin"], default-features = false, optional = true }
egui-miniquad = { version = "0.14.0", optional = true }
miniquad = { version = "0.3.12", optional = true }

# Other
anyhow = { workspace = true }
valuable = { workspace = true }
tracing = { workspace = true }

# Perf
puffin = { workspace = true }

# ===== FEATURES =====

[features]
default = [
    "backend_eframe",
#    "backend_miniquad", # Disabled as it uses out-of-date `egui` version
]

backend_eframe = ["dep:eframe"]
backend_miniquad = ["dep:egui-miniquad", "dep:miniquad"]
